# MUWP

./: .eslintignore  .eslintrc.json  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  GUIDE.md  MIGRATION_PROMPT.md  README.md  SUMMARY.md  bun.lockb  components.json  deploy.sh  foundry.toml  muwp.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  sst.config.ts  tailwind.config.js  tsconfig.json  turbo.json  vercel.json
app/: AutoConnectProvider.tsx  aptosWallet.tsx  globals.css  globals.scss  (+6 more)
lib/li.fi/: Cargo.toml  README.md
lib/li.fi/.openapi-generator/: FILES
lib/li.fi/src/apis/: advanced_api.rs  configuration.rs  default_api.rs  gas_api.rs  mod.rs
lib/li.fi/src/models/: _quote_get_404_response.rs  _tokens_get_200_response.rs  action.rs  allow_deny_prefer.rs  basic_transaction.rs  bridge.rs  bridge_definition.rs  bridges_enum.rs  chain.rs  chain_metamask.rs  chain_metamask_native_currency.rs  chains_response.rs  connection.rs  connections_response.rs  contract_call.rs  contract_call_request.rs  contract_calls_request.rs  estimate.rs  estimate_data.rs  exchange.rs  exchange_definition.rs  exchanges_enum.rs  fee_balances.rs  fee_cost.rs  gas_cost.rs  gas_price.rs  integrator_response.rs  integrator_withdrawal_response.rs  integrator_withdrawal_response_transaction_request.rs  li_fuel_status.rs  li_fuel_status_state_enum.rs  mod.rs  possibilities_response.rs  possibilities_topic_enum.rs  possiblities_request.rs  quote_bridges_enum.rs  quote_exchanges_enum.rs  route.rs  route_options.rs  routes_request.rs  (+26 more)
(+378 files in other folders)
