[package]
name = "openapi"
version = "1.0.0"
authors = ["OpenAPI Generator team and contributors"]
description = "LI.FI provides the best cross-chain swap across all liquidity pools and bridges."
# Override this license by providing a License Object in the OpenAPI.
license = "Unlicense"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^2.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
tokio = { version = "1.34.0", features = ["full"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
